--- a/miniproject/Neural network/Neural network.ipynb
+++ b/miniproject/Neural network/Neural network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,30 +15,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Unnamed: 0            date time  Free  month  day  hour  minu  weekday\n",
-      "0           0  2011-11-28 00:00:00     0     11   28     0     0        0\n",
-      "1           1  2011-11-28 00:15:00     0     11   28     0    15        0\n",
-      "2           2  2011-11-28 00:30:00     0     11   28     0    30        0\n",
-      "3           3  2011-11-28 00:45:00     0     11   28     0    45        0\n",
-      "4           4  2011-11-28 01:00:00     0     11   28     1     0        0\n"
+      "      Unnamed: 0            date time  Free  month  day  hour  minu  weekday\n",
+      "0              0  2011-11-28 00:00:00     0     11   28     0     0        0\n",
+      "1              1  2011-11-28 00:15:00     0     11   28     0    15        0\n",
+      "2              2  2011-11-28 00:30:00     0     11   28     0    30        0\n",
+      "3              3  2011-11-28 00:45:00     0     11   28     0    45        0\n",
+      "4              4  2011-11-28 01:00:00     0     11   28     1     0        0\n",
+      "5              5  2011-11-28 01:15:00     0     11   28     1    15        0\n",
+      "6              6  2011-11-28 01:30:00     0     11   28     1    30        0\n",
+      "7              7  2011-11-28 01:45:00     0     11   28     1    45        0\n",
+      "8              8  2011-11-28 02:00:00     0     11   28     2     0        0\n",
+      "9              9  2011-11-28 02:15:00     0     11   28     2    15        0\n",
+      "10            10  2011-11-28 02:30:00     0     11   28     2    30        0\n",
+      "11            11  2011-11-28 02:45:00     0     11   28     2    45        0\n",
+      "12            12  2011-11-28 03:00:00     0     11   28     3     0        0\n",
+      "13            13  2011-11-28 03:15:00     0     11   28     3    15        0\n",
+      "14            14  2011-11-28 03:30:00     0     11   28     3    30        0\n",
+      "15            15  2011-11-28 03:45:00     0     11   28     3    45        0\n",
+      "16            16  2011-11-28 04:00:00     0     11   28     4     0        0\n",
+      "17            17  2011-11-28 04:15:00     0     11   28     4    15        0\n",
+      "18            18  2011-11-28 04:30:00     0     11   28     4    30        0\n",
+      "19            19  2011-11-28 04:45:00     0     11   28     4    45        0\n",
+      "20            20  2011-11-28 05:00:00     0     11   28     5     0        0\n",
+      "21            21  2011-11-28 05:15:00     0     11   28     5    15        0\n",
+      "22            22  2011-11-28 05:30:00     0     11   28     5    30        0\n",
+      "23            23  2011-11-28 05:45:00     0     11   28     5    45        0\n",
+      "24            24  2011-11-28 06:00:00     0     11   28     6     0        0\n",
+      "25            25  2011-11-28 06:15:00     0     11   28     6    15        0\n",
+      "26            26  2011-11-28 06:30:00     0     11   28     6    30        0\n",
+      "27            27  2011-11-28 06:45:00     0     11   28     6    45        0\n",
+      "28            28  2011-11-28 07:00:00     0     11   28     7     0        0\n",
+      "29            29  2011-11-28 07:15:00     0     11   28     7    15        0\n",
+      "...          ...                  ...   ...    ...  ...   ...   ...      ...\n",
+      "1407        1407  2011-12-12 15:45:00     0     12   12    15    45        0\n",
+      "1408        1408  2011-12-12 16:00:00     0     12   12    16     0        0\n",
+      "1409        1409  2011-12-12 16:15:00     0     12   12    16    15        0\n",
+      "1410        1410  2011-12-12 16:30:00     0     12   12    16    30        0\n",
+      "1411        1411  2011-12-12 16:45:00     0     12   12    16    45        0\n",
+      "1412        1412  2011-12-12 17:00:00     0     12   12    17     0        0\n",
+      "1413        1413  2011-12-12 17:15:00     0     12   12    17    15        0\n",
+      "1414        1414  2011-12-12 17:30:00     0     12   12    17    30        0\n",
+      "1415        1415  2011-12-12 17:45:00     0     12   12    17    45        0\n",
+      "1416        1416  2011-12-12 18:00:00     0     12   12    18     0        0\n",
+      "1417        1417  2011-12-12 18:15:00     0     12   12    18    15        0\n",
+      "1418        1418  2011-12-12 18:30:00     0     12   12    18    30        0\n",
+      "1419        1419  2011-12-12 18:45:00     0     12   12    18    45        0\n",
+      "1420        1420  2011-12-12 19:00:00     0     12   12    19     0        0\n",
+      "1421        1421  2011-12-12 19:15:00     0     12   12    19    15        0\n",
+      "1422        1422  2011-12-12 19:30:00     0     12   12    19    30        0\n",
+      "1423        1423  2011-12-12 19:45:00     0     12   12    19    45        0\n",
+      "1424        1424  2011-12-12 20:00:00     0     12   12    20     0        0\n",
+      "1425        1425  2011-12-12 20:15:00     0     12   12    20    15        0\n",
+      "1426        1426  2011-12-12 20:30:00     0     12   12    20    30        0\n",
+      "1427        1427  2011-12-12 20:45:00     0     12   12    20    45        0\n",
+      "1428        1428  2011-12-12 21:00:00     0     12   12    21     0        0\n",
+      "1429        1429  2011-12-12 21:15:00     0     12   12    21    15        0\n",
+      "1430        1430  2011-12-12 21:30:00     0     12   12    21    30        0\n",
+      "1431        1431  2011-12-12 21:45:00     0     12   12    21    45        0\n",
+      "1432        1432  2011-12-12 22:00:00     0     12   12    22     0        0\n",
+      "1433        1433  2011-12-12 22:15:00     0     12   12    22    15        0\n",
+      "1434        1434  2011-12-12 22:30:00     0     12   12    22    30        0\n",
+      "1435        1435  2011-12-12 22:45:00     0     12   12    22    45        0\n",
+      "1436        1436  2011-12-12 23:00:00     0     12   12    23     0        0\n",
+      "\n",
+      "[1437 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
     "df=pd.read_csv(\"data.csv\",parse_dates=True)\n",
-    "print(df.head())"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +104,17 @@
      "output_type": "stream",
      "text": [
       "     0    1\n",
-      "0  1.0  0.0\n",
-      "1  1.0  0.0\n",
-      "2  0.0  1.0\n",
-      "3  1.0  0.0\n",
-      "4  0.0  1.0\n",
-      "     0    1\n",
       "0  0.0  1.0\n",
       "1  1.0  0.0\n",
       "2  1.0  0.0\n",
-      "3  0.0  1.0\n",
-      "4  1.0  0.0\n"
+      "3  1.0  0.0\n",
+      "4  1.0  0.0\n",
+      "     0    1\n",
+      "0  0.0  1.0\n",
+      "1  1.0  0.0\n",
+      "2  0.0  1.0\n",
+      "3  1.0  0.0\n",
+      "4  0.0  1.0\n"
      ]
     }
    ],
@@ -95,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -104,24 +162,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 completed out of 10 loss: 132897.60888671875\n",
-      "Epoch 1 completed out of 10 loss: 59469.7158203125\n",
-      "Epoch 2 completed out of 10 loss: 38568.396484375\n",
-      "Epoch 3 completed out of 10 loss: 26220.798278808594\n",
-      "Epoch 4 completed out of 10 loss: 14132.06704711914\n",
-      "Epoch 5 completed out of 10 loss: 11827.139373779297\n",
-      "Epoch 6 completed out of 10 loss: 10845.101440429688\n",
-      "Epoch 7 completed out of 10 loss: 11076.003356933594\n",
-      "Epoch 8 completed out of 10 loss: 12347.807312011719\n",
-      "Epoch 9 completed out of 10 loss: 14494.199493408203\n",
-      "Accuracy: 0.6736111\n"
+      "Epoch 0 completed out of 25 loss: 115200.26611328125\n",
+      "Epoch 1 completed out of 25 loss: 21966.29071044922\n",
+      "Epoch 2 completed out of 25 loss: 11620.249725341797\n",
+      "Epoch 3 completed out of 25 loss: 7706.6058349609375\n",
+      "Epoch 4 completed out of 25 loss: 5139.855377197266\n",
+      "Epoch 5 completed out of 25 loss: 3584.921615600586\n",
+      "Epoch 6 completed out of 25 loss: 2164.620506286621\n",
+      "Epoch 7 completed out of 25 loss: 1412.390193939209\n",
+      "Epoch 8 completed out of 25 loss: 1058.8154754638672\n",
+      "Epoch 9 completed out of 25 loss: 824.6076202392578\n",
+      "Epoch 10 completed out of 25 loss: 851.7463836669922\n",
+      "Epoch 11 completed out of 25 loss: 863.414140701294\n",
+      "Epoch 12 completed out of 25 loss: 748.6638832092285\n",
+      "Epoch 13 completed out of 25 loss: 626.1052150726318\n",
+      "Epoch 14 completed out of 25 loss: 553.5302143096924\n",
+      "Epoch 15 completed out of 25 loss: 506.3843536376953\n",
+      "Epoch 16 completed out of 25 loss: 402.201379776001\n",
+      "Epoch 17 completed out of 25 loss: 369.0888509750366\n",
+      "Epoch 18 completed out of 25 loss: 372.7032108306885\n",
+      "Epoch 19 completed out of 25 loss: 363.27938175201416\n",
+      "Epoch 20 completed out of 25 loss: 332.9741144180298\n",
+      "Epoch 21 completed out of 25 loss: 270.8414258956909\n",
+      "Epoch 22 completed out of 25 loss: 272.28301334381104\n",
+      "Epoch 23 completed out of 25 loss: 271.92333984375\n",
+      "Epoch 24 completed out of 25 loss: 230.49345922470093\n",
+      "Accuracy: 0.7916667\n"
      ]
     }
    ],
    "source": [
-    "n_nodes_hl1 = 500\n",
-    "n_nodes_hl2 = 500\n",
-    "n_nodes_hl3 = 500\n",
+    "n_nodes_hl1 = 512\n",
+    "n_nodes_hl2 = 256\n",
+    "#n_nodes_hl3 = 500\n",
     "\n",
     "n_classes = 2\n",
     "batch_size = 100\n",
@@ -136,23 +209,25 @@
     "    hidden_2_layer = {'weights':tf.Variable(tf.random_normal([n_nodes_hl1, n_nodes_hl2])),\n",
     "                      'biases':tf.Variable(tf.random_normal([n_nodes_hl2]))}\n",
     "\n",
-    "    hidden_3_layer = {'weights':tf.Variable(tf.random_normal([n_nodes_hl2, n_nodes_hl3])),\n",
-    "                      'biases':tf.Variable(tf.random_normal([n_nodes_hl3]))}\n",
+    "    #hidden_3_layer = {'weights':tf.Variable(tf.random_normal([n_nodes_hl2, n_nodes_hl3])),\n",
+    "     #                 'biases':tf.Variable(tf.random_normal([n_nodes_hl3]))}\n",
     "\n",
-    "    output_layer = {'weights':tf.Variable(tf.random_normal([n_nodes_hl3, n_classes])),\n",
+    "    output_layer = {'weights':tf.Variable(tf.random_normal([n_nodes_hl2, n_classes])),\n",
     "                    'biases':tf.Variable(tf.random_normal([n_classes])),}\n",
     "\n",
     "\n",
     "    l1 = tf.add(tf.matmul(data,hidden_1_layer['weights']), hidden_1_layer['biases'])\n",
+    "    drop_out = tf.nn.dropout(l1, 0.5)\n",
     "    l1 = tf.nn.relu(l1)\n",
     "\n",
     "    l2 = tf.add(tf.matmul(l1,hidden_2_layer['weights']), hidden_2_layer['biases'])\n",
+    "    drop_out = tf.nn.dropout(l2, 0.7)    \n",
     "    l2 = tf.nn.relu(l2)\n",
     "\n",
-    "    l3 = tf.add(tf.matmul(l2,hidden_3_layer['weights']), hidden_3_layer['biases'])\n",
-    "    l3 = tf.nn.relu(l3)\n",
+    "    #l3 = tf.add(tf.matmul(l2,hidden_3_layer['weights']), hidden_3_layer['biases'])\n",
+    "    #l3 = tf.nn.relu(l3)\n",
     "\n",
-    "    output = tf.matmul(l3,output_layer['weights']) + output_layer['biases']\n",
+    "    output = tf.matmul(l2,output_layer['weights']) + output_layer['biases']\n",
     "    \n",
     "    return output\n",
     "\n",
@@ -165,7 +240,7 @@
     "    cost = tf.reduce_mean( tf.nn.softmax_cross_entropy_with_logits(logits=prediction, labels=y) )\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)\n",
     "    \n",
-    "    hm_epochs = 10\n",
+    "    hm_epochs = 25\n",
     "    with tf.Session() as sess:\n",
     "        # OLD:\n",
     "        #sess.run(tf.initialize_all_variables())\n",
